@@ -22,6 +22,9 @@
 
 MODULE = Gtk2::SizeGroup	PACKAGE = Gtk2::SizeGroup	PREFIX = gtk_size_group_
 
+=for enum GtkSizeGroupMode
+=cut
+
 ##  GtkSizeGroup * gtk_size_group_new (GtkSizeGroupMode mode) 
 GtkSizeGroup_noinc *
 gtk_size_group_new (class, mode)
